@@ -36,6 +36,7 @@ Version 1.8.0+git:
            * <widget_path>.value for sliders
            * <widget_path>.selected for toggle buttons (checkbuttons)
            * <widget_path>.selected_index for listboxes (which include radiobuttons)
+       * wesnoth.set_dialog_active() -> <widget_path>.enabled
    * Deprecated `[get_numerical_minimum]`, `[get_numerical_maximum]` and `[reverse_value]`
    * Fixed a bug that made `[unknown_message]` not working
    * Fixed `[show_quick_debug]`, `[show_side_debug]` and `[prompt] (they didn't work on the 1.15.x series)
